vbnc/vbnc/tests/Errors/30491-1.vb
class C
    Shared Sub Main()
        Dim a = Main()
    End Sub
End Class